Afegeix actualització de localització i arregla mutacions
