# server/src/resolvers/Mutation.js
@@ -1,17 +1,29 @@
-const createUser = async (parent, args, context) => {
+const createUser = (parent, args, context) => {
+    console.log(args)
     return context.prisma.createUser({
         name: args.name,
         email: args.email
     })
 }
 
-const deleteUser = async (parent, args, context) => {
+const deleteUser = (parent, args, context) => {
     return context.prisma.deleteUser({
         id: args.id
     })
 }
 
+const updateLastKnown = (parent, args, context) => {
+    return context.prisma.updateUser({
+        data: {
+            latitude: args.latitude,
+            longitude: args.longitude
+        },
+        where: { id: args.id }
+    })
+}
+
 module.exports = {
     createUser,
-    deleteUser
+    deleteUser,
+    updateLastKnown
 }
